# cmake-template

./: .gitmodules  CMakeLists.txt  README.md  run_build.bat
cmake/: Findhello_cmake.cmake  googletest.cmake  json.cmake  utils.cmake
modules/: CMakeLists.txt
modules/demo01/: CMakeLists.txt  demo01.cpp
modules/demo03/: CMakeLists.txt  main.cpp
modules/demo04/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/test01/: CMakeLists.txt
tools/: CMakeLists.txt  sysutil.cpp
